Additional gc override considerations.