@@ -494,6 +494,31 @@ public class TestAnalysis {
     }
 
     @Test
+    void testConcMarkSweepParNewCmsSerialOldIgnored() {
+        String opts = "-Xss128k -Xmx2048M  -XX:+ExplicitGCInvokesConcurrent -XX:+UseConcMarkSweepGC -XX:+UseParNewGC "
+                + "-XX:-UseParallelOldGC";
+        JvmContext context = new JvmContext(opts);
+        context.getGarbageCollectors().add(GarbageCollector.PAR_NEW);
+        context.getGarbageCollectors().add(GarbageCollector.CMS);
+        context.getGarbageCollectors().add(GarbageCollector.SERIAL_OLD);
+        JvmOptions jvmOptions = new JvmOptions(context);
+        jvmOptions.doAnalysis();
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_CMS_MISSING.getKey()),
+                Analysis.ERROR_CMS_MISSING + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
+                Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_PAR_NEW_SERIAL_OLD.getKey()),
+                Analysis.ERROR_PAR_NEW_SERIAL_OLD + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT.getKey()),
+                Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_GC_IGNORED.getKey()),
+                Analysis.ERROR_GC_IGNORED + " analysis incorrectly identified.");
+        assertTrue(jvmOptions.hasAnalysis(Analysis.INFO_PARALLEL_OLD_CRUFT.getKey()),
+                Analysis.INFO_PARALLEL_OLD_CRUFT + " analysis not identified.");
+        assertNull(jvmOptions.getDuplicates(), "Duplicate options incorrectly identified.");
+    }
+
+    @Test
     void testConcurrentio() {
         String opts = "-Xss128k -Xconcurrentio -Xms2048M";
         JvmContext context = new JvmContext(opts);
@@ -1273,26 +1298,26 @@ public class TestAnalysis {
     }
 
     /**
-     * Test PARALLEL_OLD collector is enabled/disabled when the parallel collector is not used.
-     */
-    @Test
-    void testParallelOldfCruftJdkUnknown() {
-        String opts = "-Xss128k -Xmx2048M -XX:-UseParallelGC -XX:+UseParallelOldGC";
-        JvmContext context = new JvmContext(opts);
-        JvmOptions jvmOptions = new JvmOptions(context);
-        jvmOptions.doAnalysis();
-        assertTrue(jvmOptions.hasAnalysis(Analysis.INFO_PARALLEL_OLD_CRUFT.getKey()),
-                Analysis.INFO_PARALLEL_OLD_CRUFT + " analysis not identified.");
-        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
-                Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis incorrectly identified.");
-    }
-
-    /**
      * Test if PARALLEL_OLD collector is enabled/disabled when the parallel collector is not used false positive.
      */
     @Test
     void testParallelOldfCruftNone() {
         String opts = "-Xss128k -Xmx2048M";
+        JvmContext context = new JvmContext(opts);
+        JvmOptions jvmOptions = new JvmOptions(context);
+        jvmOptions.doAnalysis();
+        assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_PARALLEL_OLD_CRUFT.getKey()),
+                Analysis.INFO_PARALLEL_OLD_CRUFT + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
+                Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis incorrectly identified.");
+    }
+
+    /**
+     * Test -XX:+UseParallelOldGC overriding -XX:-UseParallelGC.
+     */
+    @Test
+    void testParallelOldGcOverrideCruftNone() {
+        String opts = "-Xss128k -Xmx2048M -XX:-UseParallelGC -XX:+UseParallelOldGC";
         JvmContext context = new JvmContext(opts);
         JvmOptions jvmOptions = new JvmOptions(context);
         jvmOptions.doAnalysis();
@@ -1342,28 +1367,6 @@ public class TestAnalysis {
     }
 
     @Test
-    void testParNewSerialOld() {
-        String opts = "-Xss128k -Xmx2048M -XX:+UseParNewGC -XX:-UseParallelOldGC";
-        JvmContext context = new JvmContext(opts);
-        context.getGarbageCollectors().add(GarbageCollector.PAR_NEW);
-        context.getGarbageCollectors().add(GarbageCollector.SERIAL_OLD);
-        JvmOptions jvmOptions = new JvmOptions(context);
-        jvmOptions.doAnalysis();
-        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_CMS_MISSING.getKey()),
-                Analysis.ERROR_CMS_MISSING + " analysis incorrectly identified.");
-        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
-                Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis incorrectly identified.");
-        assertTrue(jvmOptions.hasAnalysis(Analysis.ERROR_PAR_NEW_SERIAL_OLD.getKey()),
-                Analysis.ERROR_PAR_NEW_SERIAL_OLD + " analysis not identified.");
-        assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT.getKey()),
-                Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT + " analysis incorrectly identified.");
-        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_GC_IGNORED.getKey()),
-                Analysis.ERROR_GC_IGNORED + " analysis incorrectly identified.");
-        assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_PARALLEL_OLD_CRUFT.getKey()),
-                Analysis.INFO_PARALLEL_OLD_CRUFT + " analysis incorrectly identified.");
-    }
-
-    @Test
     void testParNewCmsSerialOldIgnoredConcurrentModeFailure() {
         String opts = "-Xss128k -Xmx2048M -XX:-UseParallelOldGC -XX:+UseConcMarkSweepGC "
                 + "-XX:+ExplicitGCInvokesConcurrent";
@@ -1385,6 +1388,29 @@ public class TestAnalysis {
                 Analysis.ERROR_GC_IGNORED + " analysis incorrectly identified.");
         assertTrue(jvmOptions.hasAnalysis(Analysis.INFO_PARALLEL_OLD_CRUFT.getKey()),
                 Analysis.INFO_PARALLEL_OLD_CRUFT + " analysis not identified.");
+        assertNull(jvmOptions.getDuplicates(), "Duplicate options incorrectly identified.");
+    }
+
+    @Test
+    void testParNewSerialOld() {
+        String opts = "-Xss128k -Xmx2048M -XX:+UseParNewGC -XX:-UseParallelOldGC";
+        JvmContext context = new JvmContext(opts);
+        context.getGarbageCollectors().add(GarbageCollector.PAR_NEW);
+        context.getGarbageCollectors().add(GarbageCollector.SERIAL_OLD);
+        JvmOptions jvmOptions = new JvmOptions(context);
+        jvmOptions.doAnalysis();
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_CMS_MISSING.getKey()),
+                Analysis.ERROR_CMS_MISSING + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD.getKey()),
+                Analysis.ERROR_PARALLEL_SCAVENGE_PARALLEL_SERIAL_OLD + " analysis incorrectly identified.");
+        assertTrue(jvmOptions.hasAnalysis(Analysis.ERROR_PAR_NEW_SERIAL_OLD.getKey()),
+                Analysis.ERROR_PAR_NEW_SERIAL_OLD + " analysis not identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT.getKey()),
+                Analysis.INFO_JDK8_CMS_PAR_NEW_CRUFT + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.ERROR_GC_IGNORED.getKey()),
+                Analysis.ERROR_GC_IGNORED + " analysis incorrectly identified.");
+        assertFalse(jvmOptions.hasAnalysis(Analysis.INFO_PARALLEL_OLD_CRUFT.getKey()),
+                Analysis.INFO_PARALLEL_OLD_CRUFT + " analysis incorrectly identified.");
     }
 
     @Test
